# cppbackend

./: Без названия.rtf
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: .gitignore  Dockerfile
sprint1/problems/final_task/solution/src/: game.cpp  http_server.cpp  http_server.h  main.cpp  request_handler.cpp  request_handler.h  request_handler_helper.cpp
sprint1/problems/final_task/src/: model.cpp
sprint1/problems/map_json/solution/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  config.json
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/radio/precode/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: application.cpp  application.h  command_handler.h  game.h  game_properties.cpp  game_properties.h  game_session.cpp  json_constructor.cpp  json_loader.cpp  json_loader.h  json_tags.h  logger.h  main.cpp  model.cpp  model.h  model_map.cpp  player_properties.cpp  player_properties.h  player_tokens.cpp  player_tokens.h  request_handler.cpp  request_handler.h  target_storage.h
sprint2/problems/game_state/solution/: Dockerfile
sprint2/problems/game_state/solution/src/: application.cpp  application.h  game_properties.cpp  game_properties.h  json_constructor.cpp  json_constructor.h  json_loader.cpp  json_tags.h  logger.cpp  model.h  player_properties.cpp  player_properties.h  request_handler.cpp  request_handler.h  target_storage.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: game_properties.cpp  game_properties.h  json_constructor.cpp  json_constructor.h  json_loader.cpp  json_loader.h  json_tags.h  logger.h  main.cpp  model.cpp  model.h  player_properties.cpp  player_properties.h  request_handler.cpp  request_handler.h  target_storage.h
sprint2/problems/logger/solution/: Boost-release-armv8-data.cmake  BoostConfigVersion.cmake  CMakeLists.txt  CMakePresets.json  build.sh  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conanfile.txt  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  main.cpp  module-ZLIB-release-armv8-data.cmake  my_logger.h
sprint2/problems/logger/solution/cmake/: BZip2-release-armv8-data.cmake  Boost-Target-release.cmake  BoostConfig.cmake  libbacktrace-release-armv8-data.cmake
sprint2/problems/move_players/solution/src/: application.cpp  application.h  game_properties.cpp  game_properties.h  json_constructor.cpp  json_constructor.h  json_loader.cpp  json_loader.h  json_tags.h  model.h  player_properties.cpp  player_properties.h  request_handler.cpp  request_handler.h  target_storage.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  json_constructor.cpp  json_constructor.h  json_loader.cpp  json_loader.h  json_tags.h  logging.cpp  logging.h  logging_request_handler.h  main.cpp  model.cpp  request_handler.cpp  request_handler.h  tagged.h  target_storage.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: body_constructor.cpp  body_constructor.h  command_line_parser.cpp  game_session.h  http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.h  model_dog.h  player_tokens.cpp  request_handler.cpp  request_handler.h  tagged.h  target_storage.h
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: application.cpp  application.h  game_properties.cpp  game_properties.h  http_server.h  json_constructor.cpp  json_constructor.h  json_loader.cpp  json_loader.h  json_tags.h  main.cpp  model.cpp  model.h  player_properties.cpp  player_properties.h  request_handler.cpp
sprint3/problems/ammo/solution/: ammo.txt  generate_post_ammo.py  load.yaml
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: Dockerfile
sprint3/problems/load/solution/: generate_get_ammo.py  load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: main.cpp
sprint3/problems/scores/solution/src/app/: application.cpp  application.h  player_properties.cpp  player_properties.h
sprint3/problems/scores/solution/src/handlers/: api_handler.cpp  api_handler.h  request_handler.cpp
sprint3/problems/scores/solution/src/json/: json_constructor.cpp  json_constructor.h  json_loader.cpp  json_tags.h
sprint3/problems/scores/solution/src/model/: dynamic_object_properties.cpp  dynamic_object_properties.h  game_properties.cpp  static_object_properties.cpp  static_object_prorerties.h
sprint3/problems/scores/solution/src/model/detail/: collision_detector.cpp  collision_detector.h
sprint3/problems/scores/solution/src/server/: http_server.cpp
sprint3/problems/scores/solution/tests/: main.cpp  model_tests.cpp
sprint3/problems/scores/solution/tests/test_data/: config _with_capacity.json  config.json  config_without_loot_generator.json
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/solution/src/: api_handler.h  command_handler.cpp  game_properties.cpp  game_properties.h  http_server.cpp  json_constructor.h  json_loader.cpp  json_loader.h  json_tags.h  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/static_lib/solution/tests/: model_tests.cpp
sprint3/problems/static_lib/solution/tests/test_data/: config_empty_loot.json
sprint3/problems/stress/solution/: ammo.txt
sprint3/problems/tv/solution/: CMakeLists.txt
(+67 files in other folders)
